--- a/report/bib.bib
+++ b/report/bib.bib
@@ -441,4 +441,71 @@
   file = {Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\NR6WBQCT\\Liestøl - 2011 - Learning through Situated Simulations Exploring M.pdf:application/pdf;Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\3HT2Z8CG\\228889868_Learning_through_Situated_Simulations_Exploring_Mobile_Augmented_Reality.html:text/html}
 }
 
+@misc{novaspire,
+	title = {My 5 {Staples} {Of} {Weight} {Training}},
+	url = {https://novaspire.wordpress.com/2015/01/12/my-5-staples-of-weight-training/},
+	abstract = {Fitness is a part of my life just as much as music. In the last 10 years or so my main focus for exercise related tasks has been primarily weight lifting. It was a process of learning the movements…},
+	urldate = {2017-03-18},
+	author = {{novaspire}},
+	month = jan,
+	year = {2015},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/2KKAPPC8/novaspire - 2015 - My 5 Staples Of Weight Training.html:text/html}
+}
 
+@inproceedings{samset_augmented_2008,
+	title = {Augmented reality in surgical procedures},
+	url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=810977},
+	urldate = {2017-03-18},
+	booktitle = {Electronic {Imaging} 2008},
+	publisher = {International Society for Optics and Photonics},
+	author = {Samset, Eigil and Schmalstieg, Dieter and Vander Sloten, Jos and Freudenthal, A. and Declerck, J. and Casciaro, S. and Rideng, Ø and Gersak, B.},
+	year = {2008},
+	pages = {68060K--68060K},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/KJBM9GH7/proceeding.html:text/html}
+}
+
+@misc{ten_degrees_ten_nodate,
+	title = {Ten {Degrees} – {Indoor} {Navigation} – {Bringing} navigation to the great indoors},
+	url = {http://www.tendegrees.net/},
+	urldate = {2017-03-18},
+	author = {{Ten Degrees}},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/XGVB7VI9/www.tendegrees.net.html:text/html}
+}
+
+@misc{3d_wayfinder_interactive_nodate,
+	title = {Interactive 3D {Buildings} and {Floor} {Plans}},
+	url = {https://3dwayfinder.com/},
+	abstract = {3D Architectural Visualization and Property Management Software Platform for 3D floor plans and building maps. Visualize, edit, embed your 3D floor plan and...},
+	urldate = {2017-03-18},
+	journal = {3D Wayfinder},
+	author = {{3D Wayfinder}},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/P45RIR2D/3dwayfinder.com.html:text/html}
+}
+
+@misc{steerpath_indoor_nodate,
+	title = {Indoor positioning and navigation {API}},
+	url = {http://www.steerpath.com/indoor-positioning-api/},
+	abstract = {API documentation overview},
+	urldate = {2017-03-18},
+	journal = {Steerpath indoor positioning and navigation SDK},
+	author = {{Steerpath}},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/TGW6RXBT/indoor-positioning-api.html:text/html}
+}
+
+@misc{makehuman_makehuman_nodate,
+	title = {{MakeHuman} {\textbar} {Open} source tool for making 3d characters},
+	url = {http://www.makehuman.org/},
+	urldate = {2017-03-18},
+	author = {{MakeHuman}},
+	file = {MakeHuman | Open source tool for making 3d characters:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/PRT675S5/www.makehuman.org.html:text/html}
+}
+
+@misc{unity_unity_nodate,
+	title = {Unity - {Unity} {Terms} of {Service}},
+	url = {https://unity3d.com/legal/terms-of-service},
+	abstract = {Unity is the ultimate game development platform. Use Unity to build high-quality 3D and 2D games, deploy them across mobile, desktop, VR/AR, consoles or the Web, and connect with loyal and enthusiastic players and customers.},
+	urldate = {2017-03-18},
+	journal = {Unity},
+	author = {{Unity}},
+	file = {Snapshot:/Users/davidbenicek/Library/Application Support/Firefox/Profiles/a7lvufqs.default/zotero/storage/PMK8AK3X/terms-of-service.html:text/html}
+}
